# Trabalho-U1-Grafos

./: .gitignore  Cargo.toml  README.md  teste.dot
.github/workflows/: rust.yml
benches/: common.rs  dfs_adjacency_list.rs  dfs_bench.rs  iai_dfs_adjacency_list.rs  macro_bfs_adjacency_list.rs  macro_dfs_adjacency_list.rs  micro_bfs_adjacency_list.rs  micro_dfs_adjacency_list.rs
crates/cpp-api/: Cargo.toml  build.rs
examples/: adjacency_list_operations.rs  adjacency_list_test.rs  adjacency_matrix_operations.rs  adjacency_matrix_test.rs  classify_edges.rs  classify_edges_graph.rs  classify_edges_undirected_graph.rs  graph_bfs.rs  graph_creation.rs  graph_exports.rs  graph_output.rs  node_checks.rs  node_degree.rs  number_edges.rs  number_nodes.rs  simple_tests.rs  test.rs  test5.rs  underlying_graphs.rs
examples/dot/: graph1.dot  graph2.dot
examples/output/: graph_directed1.dot  graph_directed2.dot  graph_directed3.dot  graph_directed4.dot  graph_directed5.dot  graph_undirected1.dot  graph_undirected2.dot  graph_undirected3.dot  graph_undirected4.dot  graph_undirected5.dot
latex/: CS_report.sty  main.tex  references.bib
latex/chapters/: 00_i_abstract.tex  01_introducao.tex  01_introduction.tex  02_literature.tex  02_revisao_teorica.tex  03_methodology.tex  03_representacoes.tex  04_pseudocodigo  04_pseudocodigo.tex  05_discussion.tex  06_testes.tex  07_conclusão.tex  appendix_A.tex
latex/output/: main.lof  main.lot
src/: adjacency_list.rs  adjacency_matrix.rs  graph.rs  graph_io.rs  incidence_matrix.rs  lib.rs  main.rs  utils.rs
src/graphs/: graph.rs  (+4 more)
(+16 files in other folders)
