[package]
name = "graphs-algorithms"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
cpp-api = { version = "*", path = "crates/cpp-api" }
criterion = "0.7.0"
gungraun = "0.17.0"

[[bench]]
name = "macro_dfs_adjacency_list"
harness = false

[[bench]]
name = "micro_dfs_adjacency_list"
harness = false

[[bench]]
name = "micro_bfs_adjacency_list"
harness = false
